--- a/QLTraiTreMoCoi/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
 <body>
-    <header class="bg-primary-color" style="padding: 30px 9%;">
+    <div style="margin-bottom: 11rem"></div>
+    <header class="bg-primary-color position-fixed" style="padding: 30px 9%; top: 0px; left: 0px; width: 100vw; z-index: 1000;">
         <div class="d-flex justify-content-between align-items-center">
             <!-- logo -->
             <div class="d-flex align-items-center gap-3">
@@ -44,14 +45,14 @@
             <a asp-area="User" asp-controller="Home" asp-action="AdoptChild" class="text-decoration-none text-white">Đăng ký nhận nuôi trẻ</a>
         </nav>
     </header>
-    <div class="position-absolute bg-white p-3" style="top: 179px; left: 0; height: calc(100vh - 179px); width: 22%;">
+    <div class="position-fixed bg-white p-3" style="top: 179px; left: 0; max-height: calc(100vh - 179px); width: 22%;">
         <div class="d-flex flex-column gap-2">
             <a href="" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-list"></i> Thống kê</a>
             <a asp-area="Admin" asp-controller="Account" asp-action="ListAccount" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-user"></i> Tài Khoản</a>
             <a asp-area="Admin" asp-controller="Home" asp-action="ListAccept" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-square-check"></i> Xác nhận trẻ</a>
             <a asp-area="Admin" asp-controller="Approve" asp-action="ListApprove" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-thumbs-up"></i> Duyệt đơn đăng ký</a>
             <a asp-area="Admin" asp-controller="Home" asp-action="ListChild" class="active text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-user"></i> Trẻ</a>
-            <a href="" style="bottom: 20px; left: 20px;" class="position-absolute text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-arrow-right-from-bracket"></i> Log out</a>
+            <a href="" style="bottom: 20px; left: 20px;" class="position-fixed text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-arrow-right-from-bracket"></i> Log out</a>
         </div>
     </div>
 
