--- a/QLTraiTreMoCoi/Areas/User/Views/Shared/_Layout.cshtml
+++ b/QLTraiTreMoCoi/Areas/User/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿﻿@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<NguoiDung> signInManager;﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -8,6 +10,8 @@
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
 
@@ -33,8 +37,20 @@
                         </div>
                         0346387246
                     </div>
-                    <a href="" class="text-white text-decoration-none">Đăng nhập</a>
-                    <a href="" class="text-white text-decoration-none">Đăng ký</a>
+                    @if (signInManager.IsSignedIn(User))
+                    {
+                        <div class="fs-6 text d-flex gap-2 align-items-center">
+                            <div class="d-flex align-items-center gap-2">
+                                <a asp-area="User" asp-controller="Home" asp-action="Home" class="text-white hover-text text-decoration-none">@User.FindFirst("HoTen")?.Value</a>
+                            </div> |
+                            <a class="text-white text-decoration-none" href="/Account/Logout">Đăng xuất</a>
+                        </div>
+                    }
+                    else
+                    {
+                        <a asp-controller="Account" asp-action="Login" class="text-white text-decoration-none">Đăng nhập</a>
+                        <a asp-controller="Account" asp-action="Register" class="text-white text-decoration-none">Đăng ký</a>
+                    }
                 </div>
             </div>
         </div>
@@ -88,6 +104,56 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "newestOnTop": true,
+                "progressBar": true,
+                "positionClass": "toast-top-right",
+                "preventDuplicates": true,
+                "onclick": null,
+                "showDuration": "300",
+                "hideDuration": "1000",
+                "timeOut": "5000",
+                "extendedTimeOut": "1000",
+                "showEasing": "swing",
+                "hideEasing": "linear",
+                "showMethod": "fadeIn",
+                "hideMethod": "fadeOut"
+            };
+
+
+        @if (TempData["Success"] != null)
+        {
+            <text>
+                    toastr.success('@TempData["Success"]');
+            </text>
+        }
+        @if (TempData["Error"] != null)
+        {
+            <text>
+                    toastr.error('@TempData["Error"]');
+            </text>
+        }
+        @if (TempData["Warning"] != null)
+        {
+            <text>
+                    toastr.warning('@TempData["Warning"]');
+            </text>
+        }
+        @if (TempData["Info"] != null)
+        {
+            <text>
+                    toastr.info('@TempData["Info"]');
+            </text>
+        }
+                        });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
