--- a/QLTraiTreMoCoi/Views/Account/Login.cshtml
+++ b/QLTraiTreMoCoi/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model QLTraiTreMoCoi.ViewModels.LoginViewModel
+
+@{
     ViewData["Title"] = "Đăng nhập";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -9,30 +11,34 @@
             <span class="blue-white-color">Đăng nhập</span>
         </p>
 
-        <!-- Form đăng nhập thông thường -->
-        <form asp-action="Login">
+        <!-- Form đăng nhập -->
+        <form asp-action="Login" asp-controller="Account" method="post">
             <div class="mb-3">
-                <label  class="form-label">Căn cước công dân</label>
-                <input class="form-control" placeholder="Nhập số căn cước công dân"/>
+                <label asp-for="CCCD" class="form-label">Căn cước công dân</label>
+                <input asp-for="CCCD" class="form-control" placeholder="Nhập số căn cước công dân" />
+                <span asp-validation-for="CCCD" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label class="form-label">Mật khẩu</label>
-                <input class="form-control" placeholder="Mật khẩu" />
+                <label asp-for="Password" class="form-label">Mật khẩu</label>
+                <input asp-for="Password" class="form-control" placeholder="Mật khẩu" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
-            <a asp-area="User" asp-controller="Home" asp-action="Home"
-               class="btn btn-success text-white w-100"
-               style="background-color: #2D207A;">
+            <button type="submit" class="btn btn-success text-white w-100" style="background-color: #2D207A;">
                 Đăng nhập
-            </a>
-
+            </button>
 
             <p class="text-center mt-2">
-               Bạn đã có tài khoản?
+                Bạn chưa có tài khoản?
                 <a asp-controller="Account" asp-action="Register" class="text-decoration-none">Đăng ký</a>
             </p>
         </form>
     </div>
 </div>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
